--- a/static/css/partials/shared/_core.scss
+++ b/static/css/partials/shared/_core.scss
@@ -74,7 +74,7 @@ img {
 }
 
 .no-css {
-	display: none;
+	display: none !important;
 }
 
 [data-anim] {
